# myautoland_ws

./: .gitmodules  24913nora降速版参数.params  2493链路测试成功nora飞控参数.params  2493链路测试成功基站端配置.txt  2493链路测试成功移动端配置.txt  offboard.sh  run.txt  run_control_acc.txt  start_control_acc_terminals.sh  start_landpoint.sh
src/: .rosinstall  catkin_make.txt
src/control_accuracy/: CMakeLists.txt  package.xml  readme.md
src/control_accuracy/config/: cfg_offboard_pid_fly.yaml  cfg_point_offboard_fly.yaml
src/control_accuracy/launch/: point_offboard_fly.launch
src/control_accuracy/scripts/: t265_to_uav_pose_transformer.py
src/control_accuracy/src/: offboard_pid_fly.cpp  point_offboard_fly.cpp  rect_offboard_fly.cpp
src/csi_camera_pkg/: CMakeLists.txt  package.xml
src/csi_camera_pkg/lanunch/: recorder.launch
src/csi_camera_pkg/scripts/: csi_cam.py
src/object_detection/: CMakeLists.txt
src/object_detection/cpp_nodes/: markers_landpad_det copy.cpp  markers_landpad_det.cpp
src/realsense2_camera/: CMakeLists.txt
src/realsense2_camera/include/: base_realsense_node.h
src/realsense2_camera/launch/: rs_camera.launch  (+1 more)
src/rtk_data_trans/: CMakeLists.txt  package.xml
src/tutorial_demo/: CMakeLists.txt  package.xml
src/tutorial_demo/advanced/autonomous_landing/include/: mission_utils.h
src/tutorial_demo/advanced/autonomous_landing/launch/: TQmy_autonomous_landing.launch  ctrl.launch  landpad_det.launch  my_autonomous_landing.launch  test.launch
src/tutorial_demo/advanced/autonomous_landing/src/: autonomous_landing.cpp
src/uav_control/: package.xml
src/ublox/: README.md
(+49 files in other folders)
