<?xml version="1.0"?>
<package format="2">
  <name>prometheus_demo</name>
  <version>0.0.0</version>
  <description>The prometheus_demo package</description>

  <maintainer email="qiyh8@mail.sysu.edu.cn">Yuhua Qi</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

<!-- 自己定义的消息prometheus_msgs一定要加上这两行，和CMakeLists.txt保持一致
      不然报错：
      CMake Error at /root/myautoland_ws/build/common/prometheus_msgs/cmake/prometheus_msgs-genmsg.cmake:442 (add_custom_target):
      add_custom_target cannot create target
      "prometheus_msgs_generate_messages_cpp" because another target with the
      same name already exists.  The existing target is a custom target created
      in source directory "/root/myautoland_ws/src/tutorial_demo".  See
      documentation for policy CMP0002 for more details. -->
  <build_depend>prometheus_msgs</build_depend>
  <exec_depend>prometheus_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
